# data-soong

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  ngrok.yml.example  pyproject.toml  requirements.txt
app/: config.ini.example  index.py  main.py
